<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUpdateRecordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileTv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:background="@drawable/avatar_blank"
            app:civ_border_width="3dp"
            android:scaleType="centerCrop"
            app:civ_border_color="@color/colorButton"/>

        <ImageView
            android:id="@+id/addProfileTv"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:elevation="1dp"
            android:padding="5dp"
            android:src="@drawable/ic_add_a_photo_black_24dp"
            android:background="@drawable/shape_circle"
            android:layout_alignEnd="@+id/profileTv"
            android:layout_alignBottom="@+id/profileTv"
            android:contentDescription="@string/image" />

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addProfileTv"
            android:layout_marginTop="16dp"
            android:hint="@string/nama_lengkap"
            android:textSize="15sp"
            android:background="@drawable/rounded_et"
            android:paddingStart="15dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:inputType="textCapWords|textPersonName"
            android:autofillHints="no" />

        <TextView
            android:id="@+id/dobTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_date_of_birth"
            android:background="@drawable/rounded_et"
            android:paddingBottom="16dp"
            android:textSize="15sp"
            android:drawableEnd="@drawable/ic_add_black_24dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingStart="15dp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/nameEt" />

        <EditText
            android:id="@+id/phoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dobTv"
            android:layout_marginTop="16dp"
            android:hint="@string/nomor_handphone"
            android:background="@drawable/rounded_et"
            android:textSize="15sp"
            android:paddingStart="15dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:inputType="phone"
            android:autofillHints="no" />

        <Spinner
            android:id="@+id/workSp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:paddingStart="15dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="@drawable/rounded_et"
            android:layout_below="@+id/phoneEt"
            android:layout_marginTop="16dp" />

        <ImageView
            android:id="@+id/spinner_trayek"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignEnd="@+id/workSp"
            android:layout_alignBottom="@+id/workSp"
            android:src="@drawable/ic_arrow_drop_down_black_24dp"
            android:background="@drawable/shape_circle"
            android:contentDescription="@string/image"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="15dp"
            />

        <TextView
            android:id="@+id/shortTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/short_of_your_description"
            android:textSize="17sp"
            android:layout_below="@id/workSp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_marginStart="25dp" />

        <EditText
            android:id="@+id/descriptionEt"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/shortTv"
            android:layout_marginTop="16dp"
            android:hint="@string/your_description"
            android:textSize="15sp"
            android:background="@drawable/rounded_et"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:inputType="textMultiLine"
            android:autofillHints="no" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:text="Submit"
            android:layout_below="@+id/descriptionEt"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorButton" />






    </RelativeLayout>

</ScrollView>

